--- a/src/main/resources/assets/slendermod/lang/en_us.lang
+++ b/src/main/resources/assets/slendermod/lang/en_us.lang
@@ -1,5 +1,2 @@
-tile.grassvirus.name=Corruption Virus
-tile.icevirus.name=Ice Virus
-tile.watervirus.name=Water Virus
-item.virusessence.name=Virus Essence
-item.watervirusbucket.name=Water Virus Bucket
+item.batterie.name=Batterie
+item.zettel.name=Zettel
