--- a/src/main/resources/assets/slendermod/lang/en_us.lang
+++ b/src/main/resources/assets/slendermod/lang/en_us.lang
@@ -2,3 +2,5 @@ item.batterie.name=Batterie
 item.zettel.name=Zettel
 item.notiz.name=Notiz
 item.laterne.name=Laterne
+item.remote.name=Remote
+entity.slender.name=Slenderman
