--- a/src/main/resources/assets/slendermod/lang/en_us.lang
+++ b/src/main/resources/assets/slendermod/lang/en_us.lang
@@ -3,4 +3,5 @@ item.zettel.name=Zettel
 item.notiz.name=Notiz
 item.laterne.name=Laterne
 item.remote.name=Remote
+item.endersword.name=Ender Schwert
 entity.slender.name=Slenderman
